[package]
name = "data-concentrator-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.8", features = ["csr"] }
leptos_router = { version = "0.4.10", features = ["csr"] }
reqwest = { version = "*", features = ["json"] }
serde_json = "*"
